# virtual-ecu-peripheral-harness

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  Requirements.md  Tasks.md  pyproject.toml
docs/: design_principles.md  mbd_example_research.md  mbd_review_principles.md  mbd_semantic_export_contract.md  mermaid_to_mbd_supported_items.md
ecu_app/: app.c  diagnostics.c  hal_gpio.h  hal_spi.h
examples/: ai_assisted_mbd_workflow.scaffold.mbd.md  toy_power_monitor.mbd.md  toy_thermal_fan_control.mbd.md  toy_thermal_protection_controller.mbd.md
reports/: normal_startup.md  requirements_traceability.md  spi_timeout.md  thermal_fan_fault.md  thermal_fan_normal.md  thermal_protection_boundary.md  thermal_protection_derating.md  thermal_protection_fault_latch.md  thermal_protection_normal.md  thermal_protection_recovery.md  undervoltage_fault.md
samples/: requirements.ir.json  requirements_workflow.scaffold.mbd.md
scenarios/: spi_timeout.yml  thermal_fan_normal.yml  thermal_protection_boundary.yml  thermal_protection_fault_latch.yml  thermal_protection_recovery.yml
specs/: ai_assisted_mbd_workflow.scaffold.md  ecu_interface.tmbd.yml  toy_power_monitor.manual.md  toy_thermal_fan_control.md  toy_thermal_protection_controller.md
tests/: test_code_preview.py  test_exporters.py  test_markup_exports.py  test_markup_parser.py  test_mermaid_to_mbd_coverage_doc.py  test_model_loader.py  test_peripheral_runtime.py  test_preview_runtime.py  test_project_philosophy.py  test_requirements_scaffold.py  test_review_artifact_quality.py  test_sample_catalog.py  test_scenario_runner.py  (+11 more)
(+134 files in other folders)
